--- a/galleon/conf/wrapper.conf
+++ b/galleon/conf/wrapper.conf
@@ -17,10 +17,10 @@ wrapper.java.library.path.1=@lib@
 
 # Java Additional Parameters
 wrapper.java.additional.1=-Xverify:none
-@win32comment@wrapper.java.additional.2=-Djava.awt.fonts="%JAVA_HOME%/lib/fonts":"%JAVA_HOME%/jre/lib/fonts"
-@win32comment@wrapper.java.additional.3=-Dsun.java2d.fontpath="%JAVA_HOME%/lib/fonts":"%JAVA_HOME%/jre/lib/fonts"
-@win32comment@wrapper.java.additional.4=-Xbootclasspath/a:@lib@/pja.jar
-@win32comment@wrapper.java.additional.5=-Dawt.toolkit=com.eteks.awt.PJAToolkit
+wrapper.java.additional.2=-Djava.awt.fonts="%JAVA_HOME%/lib/fonts":"%JAVA_HOME%/jre/lib/fonts"
+wrapper.java.additional.3=-Dsun.java2d.fontpath="%JAVA_HOME%/lib/fonts":"%JAVA_HOME%/jre/lib/fonts"
+wrapper.java.additional.4=-Xbootclasspath/a:@lib@/pja.jar
+wrapper.java.additional.5=-Dawt.toolkit=com.eteks.awt.PJAToolkit
 @win32comment@wrapper.java.additional.6=-Droot=@root@
 @win32comment@wrapper.java.additional.7=-Dconf=@conf@
 @win32comment@wrapper.java.additional.8=-Dcache=@cache@
