--- a/galleon/conf/wrapper.conf
+++ b/galleon/conf/wrapper.conf
@@ -30,8 +30,9 @@ wrapper.java.additional.5=-Dawt.toolkit=com.eteks.awt.PJAToolkit
 @win32comment@wrapper.java.additional.12=-Dapps=@apps@
 @win32comment@wrapper.java.additional.13=-Dhme=@hme@
 @win32comment@wrapper.java.additional.14=-Dskins=@skins@
-@osxcomment@@win32comment@wrapper.java.additional.15=-Djava.awt.graphicsenv=com.eteks.java2d.PJAGraphicsEnvironment
-@unixcomment@@win32comment@wrapper.java.additional.15=-Djava.awt.headless=@headless@
+@win32comment@wrapper.java.additional.15=-Dskins=@bin@
+@osxcomment@@win32comment@wrapper.java.additional.16=-Djava.awt.graphicsenv=com.eteks.java2d.PJAGraphicsEnvironment
+@unixcomment@@win32comment@wrapper.java.additional.16=-Djava.awt.headless=@headless@
 
 # Initial Java Heap Size (in MB)
 wrapper.java.initmemory=64
